...
                        android:paddingEnd="@dimen/drop_down_size"
                        tools:ignore="RtlSymmetry,LabelFor,Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imageButtonAliases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/show_aliases"
                    android:padding="@dimen/default_margin_content_small"
...
                    android:text="@string/to"
                    android:textColor="@color/nobel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewChipsTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonAdditionalRecipientsVisibility"
                    app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerViewAutocompleteBcc" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSetWebPortalPassword"
                style="@style/AppWidget.Button.Big.Orange"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height_small"
                android:layout_gravity="center"
                android:autoSizeMaxTextSize="@dimen/default_text_size_medium"
                android:autoSizeTextType="uniform"
...
                style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_subject">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailSubject|textCapSentences|textAutoCorrect"
                    android:maxLines="1"
                    android:paddingTop="@dimen/default_margin_content" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bottom_line_transparent"
                android:hint="@string/prompt_compose_security_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
                    android:paddingTop="@dimen/default_margin_small" />

...
