...
    <string name="hint_clipboard_is_empty">Your clipboard is empty. Please find your %1$s Key where you are storing it, select the text and copy it. After that, return back to %2$s.</string>
    <string name="file_has_wrong_pgp_structure">The content of your file does not look like a valid PGP %1$s Key.</string>
    <string name="source_has_wrong_pgp_structure">The content which you provided does not look like a valid PGP %1$s Key.</string>
    <string name="key_successfully_imported">Key(s) successfully imported</string>
    <string name="the_key_successfully_imported">Key successfully imported</string>
    <string name="attach_file">Attach file</string>
    <string name="switch_to_standard_email">Switch to standard email</string>
    <string name="switch_to_secure_email">Switch to secure email</string>
    <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
    <string name="import_their_public_key">Import their Public Key</string>
    <string name="copy_from_other_contact">Copy from other contact</string>
    <string name="template_remove_recipient">Remove %1$s</string>
    <string name="protect_with_password">Protect with password</string>
...
    <string name="set_pass_phrase">Set pass phrase</string>
    <string name="confirm_pass_phrase">Confirm pass phrase</string>
    <string name="use_another_pass_phrase">Use another pass phrase</string>
    <string name="repeat_pass_phrase">Repeat pass phrase</string>
    <string name="loss_of_this_pass_phrase_cannot_be_recovered">Lost pass phrase cannot be recovered.</string>
    <string name="see_choosing_secure_pass_phrases">See choosing secure pass phrases</string>
    <string name="select_stronger_pass_phrase">Please select a stronger pass phrase. Combinations of 4 to 5 uncommon
        words are the best.</string>
    <string name="password_quality_subtext">(time to crack:</string>
    <string name="password_quality_perfect">perfect</string>
    <string name="password_quality_great">great</string>
    <string name="password_quality_good">good</string>
    <string name="password_quality_reasonable">reasonable</string>
...
        <item quantity="other">%1$d of %2$d keys successfully unlocked. There are %3$d key left. Try a different pass phrase to unlock all keys.</item>
    </plurals>
    <string name="hint_when_found_keys_in_email">%1$s found one or more backups of your account key(s).\n\nKey backups are encrypted for your protection. This makes them useless without your pass phrase.\n\nPlease enter pass phrase(s) that you used when the backup was made.</string>
    <string name="forward">Forward</string>
    <string name="forward_encrypted">Forward\nEncrypted</string>
    <string name="reply_encrypted">Reply\nEncrypted</string>
    <string name="reply_all_encrypted">Reply All\nEncrypted</string>
    <string name="forward_template">\n\n---------- Forwarded message ----------\nFrom: %1$s\nDate: %2$s\nSubject: %3$s\nTo: %4$s\n</string>
    <string name="failed_please_try_again_later">Failed. Please try again later</string>
    <string name="cyrillic_search_not_support_yet">Searching with foreign alphabets not supported yet</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_public_keys_of_your_contacts">Add public keys of your contacts to send them encrypted messages.</string>
    <string name="search_by_key_id_or_email">Search by key id or email</string>
...
