...
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHint"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKeyPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:inputType="textPassword" />

...
                android:gravity="center"
                tools:text="WEAK (average time to crack: 13 seconds)" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSetPassPhrase"
            style="@style/AppWidget.Button.Big.SilverWithWhiteText"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/default_margin_content_big"
            android:text="@string/set_pass_phrase"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
...
